clusters/vps1/config/istio-gateway/main-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.jkulzer.dev"
    tls:
      httpsRedirect: false # Currently disabled for dev
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.jkulzer.dev"
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: star-kube-home-tls
      httpsRedirect: false # Currently disabled for dev
